--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
   <body>
     <button onclick="pressed()">Button</button>
     <button id="btn2">Button2</button>
-    <script src="formular.js"></script>
+    <script src="./js/formular.js"></script>
   </body>
 </html>
