--- a/public/index.html
+++ b/public/index.html
@@ -12,94 +12,103 @@
     <link rel="stylesheet" href="./css/clubnav.css" />
   </head>
   <body>
-    <!--
-    <div class="header">
-      <h2>Scroll Down</h2>
-      <p>Scroll down to see the sticky effect.</p>
-    </div>
-    -->
     <ul id="navbar">
-        <li><a href="index.html">Home</a></li>
-        <li><a class="inactive" href="table.html">Table</a></li>
-    </ul> 
-    <div class="background-image">
-      
-    </div>
-    <div>
+      <li><a href="index.html">Home</a></li>
+      <li><a class="inactive" href="table.html">Table</a></li>
+    </ul>
+
+    <div class="background-image"></div>
+
+    <div class="contentbox">
       <header class="info">
         <h1>What's this website about ?</h1>
-        <p>This web page represents my portfolio exam of the Advanced Systems Development course. The task was to create a small multipage website using all the tags used during the lectures, modify them with CSS rules and make them dynamic using JavaScript.</p>
-        <p>Since there are no guidelines about a theme I decided to create a website about the Premiere League, because I am a soccer fan of Manchester City myself. Since there are no guidelines about a theme I decided to create a website about the Premiere League, because I am a football fan of Manchester City myself.</p>
+        <p>
+          This web page represents my portfolio exam of the Advanced Systems
+          Development course. The task was to create a small multipage website
+          using all the tags used during the lectures, modify them with CSS
+          rules and make them dynamic using JavaScript.
+        </p>
+        <p>
+          Since there are no guidelines about a theme I decided to create a
+          website about the Premiere League, because I am a soccer fan of
+          Manchester City myself. Since there are no guidelines about a theme I
+          decided to create a website about the Premiere League, because I am a
+          football fan of Manchester City myself.
+        </p>
       </header>
-      <div>
-        <article>
-          <h2>What is the Premier League?</h2>
-          <section></section>
-        </article>
-      </div>
-      <h2>Fixed Full-height Side Nav</h2>
-      <h3>
-        Try to scroll this area, and see how the sidenav sticks to the page
-      </h3>
-      <p>
-        Notice that this div element has a left margin of 25%. This is because
-        the side navigation is set to 25% width. If you remove the margin, the
-        sidenav will overlay/sit on top of this div.
-      </p>
-      <p>
-        Also notice that we have set overflow:auto to sidenav. This will add a
-        scrollbar when the sidenav is too long (for example if it has over 50
-        links inside of it).
-      </p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
-      <p>Some text..</p>
+      <article>
+        <h2>What is the Premier League?</h2>
+        <p>
+          The Premiere League is the highest professional league in English
+          football. There are 20 teams that play for the championship in a total
+          of 38 games.
+        </p>
+      </article>
+      <article>
+        <h2>Fixed Full-height Side Nav</h2>
+        <h3>
+          Try to scroll this area, and see how the sidenav sticks to the page
+        </h3>
+        <p>
+          Notice that this div element has a left margin of 25%. This is because
+          the side navigation is set to 25% width. If you remove the margin, the
+          sidenav will overlay/sit on top of this div.
+        </p>
+        <p>
+          Also notice that we have set overflow:auto to sidenav. This will add a
+          scrollbar when the sidenav is too long (for example if it has over 50
+          links inside of it).
+        </p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+      </article>
     </div>
 
     <!--
