Navbar Basis added

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,27 @@
       </div>
     </header>
 
+    <nav>
+      <ul id="primary-navigation" class="primary-navigation flex">
+        <li class="active">
+          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html">
+            <span aria-hidden="true">00</span>Home
+          </a>
+        <li>
+          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="table.html">
+            <span aria-hidden="true">01</span>Tables
+          </a>
+        <li>
+          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="stats.html">
+            <span aria-hidden="true">02</span>Stats
+          </a>
+        <li>
+          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="history.html">
+            <span aria-hidden="true">03</span>History
+          </a>
+      </ul>
+    </nav>
+
     <section>
       <div class="container">
         <h2 class="text-center">About</h2>
