--- a/public/index.html
+++ b/public/index.html
@@ -15,23 +15,27 @@
         <h1>My Portfolio about the UEFA Champions League</h1>
       </div>
     </header>
+    
+    <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
+      <span class="sr-only">Menu</span>
+    </button>
 
     <nav>
       <ul id="primary-navigation" class="primary-navigation flex">
         <li class="active">
-          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html">
+          <a class="ff-sans-cond uppercase text-dark letter-spacing-2" href="index.html">
             <span aria-hidden="true">00</span>Home
           </a>
         <li>
-          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="table.html">
+          <a class="ff-sans-cond uppercase text-dark letter-spacing-2" href="table.html">
             <span aria-hidden="true">01</span>Tables
           </a>
         <li>
-          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="stats.html">
+          <a class="ff-sans-cond uppercase text-dark letter-spacing-2" href="stats.html">
             <span aria-hidden="true">02</span>Stats
           </a>
         <li>
-          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="history.html">
+          <a class="ff-sans-cond uppercase text-dark letter-spacing-2" href="history.html">
             <span aria-hidden="true">03</span>History
           </a>
       </ul>
