--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio | UEFA Champions League</title>
 
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script src="js/nav.js" defer></script>
   </head>
 
@@ -17,36 +17,29 @@
       </div>
     </header>
 
-    <button
-      class="mobile-nav-toggle"
-      aria-controls="primary-navigation"
-      aria-expanded="false"
-    >
+    <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
       <span class="sr-only">Menu</span>
     </button>
 
-    <nav>
+    <nav class="bg-nav">
       <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
-        <li class="active">
-          <a id="nav-item" class="uppercase text-dark letter-spacing-2" href="index.html">
+        <li>
+          <a class="uppercase text-dark letter-spacing-2 active" href="index.html">
             <span aria-hidden="true">00</span>Home
           </a>
         </li>
-
         <li>
-          <a id="nav-item" class="uppercase text-dark letter-spacing-2" href="table.html">
+          <a class="uppercase text-dark letter-spacing-2" href="table.html">
             <span aria-hidden="true">01</span>Tables
           </a>
         </li>
-
         <li>
-          <a id="nav-item" class="uppercase text-dark letter-spacing-2" href="stats.html">
+          <a class="uppercase text-dark letter-spacing-2" href="stats.html">
             <span aria-hidden="true">02</span>Stats
           </a>
         </li>
-
         <li>
-          <a id="nav-item" class="uppercase text-dark letter-spacing-2" href="history.html">
+          <a class="uppercase text-dark letter-spacing-2" href="history.html">
             <span aria-hidden="true">03</span>History
           </a>
         </li>
@@ -58,7 +51,7 @@
         <h2 class="text-center">About</h2>
         <div class="split">
           <div>
-            <p>
+            <p class="text-justify">
               The UEFA Champions League (abbreviated as UCL) is an annual club
               football competition organised by the Union of European Football
               Associations (UEFA) and contested by top-division European clubs,
@@ -68,7 +61,7 @@
             </p>
           </div>
           <div>
-            <p>
+            <p class="text-justify">
               It is one of the most prestigious football tournaments in the
               world and the most prestigious club competition in European
               football, played by the national league champions (and, for some
@@ -84,7 +77,7 @@
         <div class="split">
           <div>
             <h2>title</h2>
-            <p>
+            <p class="text-justify">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Aspernatur neque veritatis eum distinctio enim explicabo?
             </p>
@@ -104,7 +97,7 @@
           </div>
           <div>
             <h2>Trophy</h2>
-            <p>
+            <p class="text-justify">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Aspernatur neque veritatis eum distinctio enim explicabo?
             </p>
