hover effects on navbar inactive sites

--- a/public/index.html
+++ b/public/index.html
@@ -24,22 +24,22 @@
     <nav class="bg-nav">
       <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
         <li>
-          <a class="uppercase text-dark letter-spacing-2 active" href="index.html">
+          <a class="uppercase text-dark letter-spacing-2 active nav-link" href="index.html">
             <span aria-hidden="true">00</span>Home
           </a>
         </li>
         <li>
-          <a class="uppercase text-dark letter-spacing-2" href="table.html">
+          <a class="uppercase text-dark letter-spacing-2 nav-link" href="table.html">
             <span aria-hidden="true">01</span>Tables
           </a>
         </li>
         <li>
-          <a class="uppercase text-dark letter-spacing-2" href="stats.html">
+          <a class="uppercase text-dark letter-spacing-2 nav-link" href="stats.html">
             <span aria-hidden="true">02</span>Stats
           </a>
         </li>
         <li>
-          <a class="uppercase text-dark letter-spacing-2" href="history.html">
+          <a class="uppercase text-dark letter-spacing-2 nav-link" href="history.html">
             <span aria-hidden="true">03</span>History
           </a>
         </li>
