--- a/public/table.html
+++ b/public/table.html
@@ -46,65 +46,140 @@
       </ul>
     </nav>
 
-    <section>
-      <div class="container">
-        <h2 class="text-center">About</h2>
-        <div class="split">
-          <div>
-            <p class="text-justify">
-              The UEFA Champions League (abbreviated as UCL) is an annual club
-              football competition organised by the Union of European Football
-              Associations (UEFA) and contested by top-division European clubs,
-              deciding the competition winners through a round robin group stage
-              to qualify for a double-legged knockout format, and a single leg
-              final
-            </p>
-          </div>
-          <div>
-            <p class="text-justify">
-              It is one of the most prestigious football tournaments in the
-              world and the most prestigious club competition in European
-              football, played by the national league champions (and, for some
-              nations, one or more runners-up) of their national associations.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <div class="content">
+        <section class="section_transparent">
+            <div class="container-fluid"></div>
+        </section>
 
-    <section class="bg-dark">
-      <div class="container">
-        <div class="split">
-          <div>
-            <h2>title</h2>
-            <p class="text-justify">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Aspernatur neque veritatis eum distinctio enim explicabo?
-            </p>
-          </div>
-          <div>
-            <img src="./images/championsleague2.jpg" alt="UCL Theme" />
-          </div>
-        </div>
-      </div>
-    </section>
+        <section>
+            <div class="container-fluid">
+                <div class="content">
+                    <header class="box-header">
+                        <h1 class="section-title big-headline"></h1>
+                        <div class="standings">
+                            <h3 class="groupname"></h3>
+                            <table class="table-standings">
+                                <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                            </table>
+                        </div>
+                    </header>
+                </div>
+            </div>
+        </section>
+    </div>
 
-    <section class="bg-gradient">
-      <div class="container">
-        <div class="split">
-          <div>
-            <img src="./images/trophy.jpg" alt="UCL Trophy" />
-          </div>
-          <div>
-            <h2>Trophy</h2>
-            <p class="text-justify">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Aspernatur neque veritatis eum distinctio enim explicabo?
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <table>
+        <thead>
+            <tr>
+                <th></th>
+                <th>Played</th>
+                <th>Won</th>
+                <th>Drawn</th>
+                <th>Lost</th>
+                <th>For</th>
+                <th>Against</th>
+                <th>Goal Difference</th>
+                <th>Points</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <div class="col-club">
+                        <div class="col-club-img">
+                            <img><img/>
+                        </div>
+                        <div class="col-club-name">
+                            <p>ManCity</p>
+                        </div>
+                    </div>
+                </td>
+                <td>5</td>
+                <td>4</td>
+                <td>0</td>
+                <td>1</td>
+                <td>17</td>
+                <td>8</td>
+                <td>9</td>
+                <td><p class="points">12</p></td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="col-club">
+                        <div class="col-club-img">
+                            <img><img/>
+                        </div>
+                        <div class="col-club-name">
+                            <p>PSG</p>
+                        </div>
+                    </div>
+                </td>
+                <td>5</td>
+                <td>2</td>
+                <td>2</td>
+                <td>1</td>
+                <td>9</td>
+                <td>7</td>
+                <td>2</td>
+                <td><p class="points">8</p></td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="col-club">
+                        <div class="col-club-img">
+                            <img><img/>
+                        </div>
+                        <div class="col-club-name">
+                            <p>RB Leipzig</p>
+                        </div>
+                    </div>
+                </td>
+                <td>5</td>
+                <td>1</td>
+                <td>1</td>
+                <td>3</td>
+                <td>13</td>
+                <td>13</td>
+                <td>0</td>
+                <td><p class="points">4</p></td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="col-club">
+                        <div class="col-club-img">
+                            <img><img/>
+                        </div>
+                        <div class="col-club-name">
+                            <p>Club Brugge</p>
+                        </div>
+                    </div>
+                </td>
+                <td>5</td>
+                <td>1</td>
+                <td>1</td>
+                <td>3</td>
+                <td>5</td>
+                <td>16</td>
+                <td>-11</td>
+                <td><p class="points">4</p></td>
+            </tr>
+        </tbody>
+    </table>
+
+    <br><br><br><br><br>
 
   </body>
 </html>
