first table approach

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       <span class="sr-only">Menu</span>
     </button>
 
-    <nav class="bg-nav">
+    <nav>
       <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
         <li>
           <a class="uppercase text-dark letter-spacing-2 active nav-link" href="index.html">
