Back-to-Top Button finished

--- a/public/stats.html
+++ b/public/stats.html
@@ -46,7 +46,7 @@
       </ul>
     </nav>
 
-    
-
+    <!-- <div onclick="scrollToTop()" class="scrollTop">Top</div> -->
+    <button class="scrollTopBtn transparent-look"></button>
   </body>
 </html>
