--- a/public/history.html
+++ b/public/history.html
@@ -46,7 +46,12 @@
       </ul>
     </nav>
 
+    <section></section>
+    <section></section>
+
+    <!-- <div onclick="scrollToTop()" class="scrollTop">Top</div> -->
     
+    <button class="scrollTopBtn transparent-look"></button>
 
   </body>
 </html>
