--- a/public/index.html
+++ b/public/index.html
@@ -105,5 +105,7 @@
         </div>
       </div>
     </section>
+    <!-- <div onclick="scrollToTop()" class="scrollTop">Top</div> -->
+    <button class="scrollTopBtn transparent-look "></button>
   </body>
 </html>
