--- a/public/table.html
+++ b/public/table.html
@@ -829,7 +829,7 @@
               </tbody>
             </table>
           </div>
-          <!--Group H FIXME: Links zur Website-->
+          <!--Group H-->
           <div class="box-standing">
             <h3 class="groupname">Group H</h3>
             <table class="table-standing">
@@ -940,5 +940,8 @@
         </div>
       </section>
     </div>
+
+    <!-- <div onclick="scrollToTop()" class="scrollTop">Top</div> -->
+    <button class="scrollTopBtn transparent-look"></button>
   </body>
 </html>
