Homepage and Tablepage done

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
         </div>
       </div>
     </section>
-    <!-- <div onclick="scrollToTop()" class="scrollTop">Top</div> -->
-    <button class="scrollTopBtn transparent-look "></button>
+    
+    <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
   </body>
 </html>
