--- a/public/stats.html
+++ b/public/stats.html
@@ -46,7 +46,6 @@
       </ul>
     </nav>
 
-    <!-- <div onclick="scrollToTop()" class="scrollTop">Top</div> -->
-    <button class="scrollTopBtn transparent-look"></button>
+    <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
   </body>
 </html>
