--- a/public/history.html
+++ b/public/history.html
@@ -48,10 +48,8 @@
 
     <section></section>
     <section></section>
-
-    <!-- <div onclick="scrollToTop()" class="scrollTop">Top</div> -->
     
-    <button class="scrollTopBtn transparent-look"></button>
+    <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
 
   </body>
 </html>
