--- a/public/table.html
+++ b/public/table.html
@@ -941,7 +941,6 @@
       </section>
     </div>
 
-    <!-- <div onclick="scrollToTop()" class="scrollTop">Top</div> -->
-    <button class="scrollTopBtn transparent-look"></button>
+    <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
   </body>
 </html>
