--- a/public/stats.html
+++ b/public/stats.html
@@ -6,7 +6,7 @@
     <title>Portfolio | UEFA Champions League</title>
 
     <link rel="stylesheet" href="css/main.css" />
-    <script src="js/nav.js" defer></script>
+    <script src="js/main.js" defer></script>
   </head>
 
   <body>
@@ -45,6 +45,7 @@
         </li>
       </ul>
     </nav>
+    <hr class="nav-underline">
 
     <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
   </body>
