--- a/public/table.html
+++ b/public/table.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/table.css" />
-    <script src="js/nav.js" defer></script>
+    <script src="js/main.js" defer></script>
   </head>
 
   <body>
@@ -66,6 +66,7 @@
         </li>
       </ul>
     </nav>
+    <hr class="nav-underline">
 
     <div class="grid-box">
       <section class="group-standings">
