Login.html added

--- a/public/history.html
+++ b/public/history.html
@@ -64,6 +64,11 @@
             <span aria-hidden="true">03</span>History
           </a>
         </li>
+        <li>
+          <a class="uppercase text-dark letter-spacing-2 nav-link" href="login.html">
+            <span aria-hidden="true">04</span>Login
+          </a>
+        </li>
       </ul>
     </nav>
 
