--- a/public/login.html
+++ b/public/login.html
@@ -12,8 +12,8 @@
   <body>
     <header class="bg-cyan text-center">
       <div class="container container--narrow">
-        <p>UEFA Champions League | Stats</p>
-        <h1>Stats</h1>
+        <p>UEFA Champions League | Login</p>
+        <h1>Login</h1>
       </div>
     </header>
 
@@ -34,7 +34,7 @@
           </a>
         </li>
         <li>
-          <a class="uppercase text-dark letter-spacing-2 active nav-link" href="stats.html">
+          <a class="uppercase text-dark letter-spacing-2 nav-link" href="stats.html">
             <span aria-hidden="true">02</span>Stats
           </a>
         </li>
@@ -44,7 +44,7 @@
           </a>
         </li>
         <li>
-          <a class="uppercase text-dark letter-spacing-2 nav-link" href="login.html">
+          <a class="uppercase text-dark letter-spacing-2 active nav-link" href="login.html">
             <span aria-hidden="true">04</span>Login
           </a>
         </li>
